# Resource-Allocator

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 134427ebe2a8_.py  249635ae0402_expanded_resource_and_resource_group_to_.py  2c0ac3d2c214_added_request_status_table_and_fields.py  31c436b2a62c_removed_iteration_accepts_requests_in_.py  32789e69a7e2_added_image_image_type_tables.py  35654575f599_added_iteration_allocation_and_request_.py  38e9aa8b0389_changed_allocation_points_to_not_be_.py  571d7703b7ab_fixed_incorrect_base_model_column_name.py  720cdb41038a_added_user_fields_and_constraints.py  9627bdb6499f_misc_alembic_fixes.py  9fb8acb8ff83_changed_iteration_columns_to_date.py  b23a9cbcc883_added_resource_tables.py  c0788d6869bb_initial_migration_role_user_blank_other_.py  d5dfbb57a502_.py
resource_allocator/: __main__.py  config.py  db.py  main.py  models.py
resource_allocator/managers/: __init__.py  allocation.py  base.py  image.py  iteration.py  request.py  resource.py  resource_to_group.py  user.py
resource_allocator/resources/: __init__.py  allocation.py  base.py  image.py  iteration.py  request.py  resource.py  resource_to_group.py  routes.py  user.py
resource_allocator/schemas/: __init__.py  allocation.py  base.py  image.py  iteration.py  request.py  resource.py  resource_group.py  resource_to_group.py  user.py
resource_allocator/schemas/request/: iteration.py  resource.py  user.py
resource_allocator/schemas/response/: resource.py
resource_allocator/utils/: auth.py  db.py  schema.py
tests/: test_config.py  test_db.py  test_main.py  test_models.py
tests/managers/: test_allocation.py  test_base.py  test_image.py  test_resource.py  test_user.py
tests/resources/: test_base.py  test_resource.py  test_user.py
tests/schema/: test_iteration.py  test_user.py
tests/schema/request/: test_user.py
tests/utils/: test_auth.py  test_db.py  test_schema.py
utils/: azure_login_finalize.sh  azure_login_init.sh  build_docker.sh  create_allocation.sh  create_automatic_allocation.sh  create_group.sh  create_iteration.sh  create_request.sh  create_resource.sh  create_resource_to_group.sh  create_top_level_group.sh  create_top_level_group_image.sh  deploy_docker.sh  deploy_local.sh  get_resource.sh  list_groups.sh  list_iterations.sh  list_resources.sh  login.sh  modify_resource_group.sh  signup.sh
