[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource_allocator"
version = "0.3.0"
description = "Resource planner is an automated back-end API to facilitate the reservation and allocation of loosely-defined resources such as desks in an office space."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
	{name = "Bugzey", email = "radddi@abv.bg"},
]
dependencies = [
	"alembic",
	"flask",
	"flask_httpauth",
	"flask_restful",
	"gunicorn",
	"marshmallow",
	"pillow",
	"psycopg2-binary",
	"pyjwt",
	"requests",
]

[project.optional-dependencies]

[project.urls]
homepage = "https://github.com/Bugzey/Resource-Allocator"

[project.scripts]
resource_allocator = "resource_allocator.main:main"

[project.gui-scripts]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = ["tests", "utils"]  # empty by default
namespaces = false  # true by default

[tool.pylint.main]
ignore = "tests"
jobs = 4

[tool.pylint."messages control"]
disable = [
	"wildcard-import",
	"trailing-newlines",
	"use-dict-literal",
]

good-names = [
	"i",
	"j",
	"k",
	"ex",
	"Run",
	"_",
	"pd",
	"df",
	"ok",
]

