[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource_allocator"
version = "0.3.0"
description = "Resource planner is an automated back-end API to facilitate the reservation and allocation of loosely-defined resources such as desks in an office space."
readme = "README.md"
requires-python = ">=3.12,<3.13"  # remove upper bound when we remove classmethod -> property
license = {file = "LICENSE"}
authors = [
	{name = "Bugzey", email = "radddi@abv.bg"},
]
dependencies = [
	"alembic~=1.14",
	"flask~=3.1",
	"flask_httpauth~=4.8",
	"flask_restful~=0.3",
	"gunicorn~=22.0",
	"marshmallow~=3.23",
	"pillow~=11.1",
	"psycopg2-binary~=2.9",
	"pyjwt~=2.10",
	"requests~=2.32",
	"sqlalchemy~=2.0",
]

[project.optional-dependencies]
dev = [
	"flake8",
	"flake8-pyproject",
]

[project.urls]
homepage = "https://github.com/Bugzey/Resource-Allocator"

[project.scripts]
resource_allocator = "resource_allocator.main:main"

[project.gui-scripts]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = ["tests", "utils"]  # empty by default
namespaces = false  # true by default

[tool.pylint.main]
ignore = "tests"
jobs = 4

[tool.pylint."messages control"]
disable = [
	"wildcard-import",
	"trailing-newlines",
	"use-dict-literal",
]

good-names = [
	"i",
	"j",
	"k",
	"ex",
	"Run",
	"_",
	"pd",
	"df",
	"ok",
]

[tool.flake8]
extend_exclude = [
    "venv*",
	"alembic",
]
max-line-length = 100
ignore = [
	"E123", "E704", "E121", "W504", "E24", "W503", "E226", "E126", "E203"
]
verbose = true
