[metadata]
name = resource_allocator
version = 0.1.0
url = https://github.com/Bugzey/Resource-Allocator
author = Bugzey
author_email = radddi@abv.bg
license = MIT

[options]
packages = find:
package_dir = 
	= .
include_package_data = True
install_requires =
	alembic
	build
	flask
	flask_httpauth
	flask_restful
	marshmallow
	setuptools

zip_safe = True

[options.packages.find]
exclude = 
	tests
	utils

[options.package_data]

[options.entry_points]

